--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,5 @@
 @import "libs/bootstrap-reboot.min";
 @import "libs/slick";
-// @import "libs/slick-theme";
 @import "variables/variables";
 
 
@@ -34,3 +33,4 @@ h1,h2,h3,h4,h5,h6 {
 @import "blocks/block-description";
 @import "blocks/services";
 @import "blocks/feedback";
+@import "blocks/team";
