--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -23,4 +23,10 @@
             color: #ffffff;
         }
     }
+    &__burger {
+        display: none;
+    }
+    &__close {
+        display: none;
+    }
 }
