--- a/src/sass/blocks/_btn.scss
+++ b/src/sass/blocks/_btn.scss
@@ -30,4 +30,12 @@
     &_mb100 {
         margin-bottom: 100px;
     }
+    &_form {
+        width: 130px;
+        height: 50px;
+        padding: 19px 43px 19px 44px;
+        border: none;
+        margin-right: 0;
+        font-weight: 500;
+    }
 }
