--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -12,9 +12,11 @@
         justify-content: space-between;
     }
     &__information {
-        max-width: 583px;
+        max-width: 598px;
+        padding-right: 15px;
     }
     &__title {
+        font-family: Raleway;
         font-size: 55px;
         line-height: 65px;
         font-weight: 700;
@@ -29,7 +31,11 @@
         color: #ffffff;
         margin-bottom: 38px;
     }
+    iframe {
+        display: none;
+    }
     &__video {
+        position: relative;
         background: url("../img/video_bg.png") center no-repeat;
         width: 600px;
         height: 307px;
@@ -38,6 +44,12 @@
         align-items: center;
         justify-content: center;
         border: 1px solid $main-color;
+        iframe {
+            display: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
         &-block {
             display: flex;
             align-items: center;
