--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -5,7 +5,8 @@
         margin-bottom: 49px;
     }
     &__wrapper {
-        width: 600px;
+        max-width: 620px;
         margin: 0 auto;
+        padding: 0 10px;
     }
 }
