--- a/src/sass/blocks/_btn.scss
+++ b/src/sass/blocks/_btn.scss
@@ -1,12 +1,10 @@
 .btn {
     display: inline-block;
     text-align: center;
-    width: 160px;
-    height: 55px;
-    background-color: #ffffff;
+    padding: 22px 26px 22px 26px;
+    background-color: #fff;
     box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.15);
     border-radius: 5px;
-    padding: 22px 26px;
     font-size: 15px;
     line-height: 1.2;
     font-weight: 700;
@@ -23,16 +21,10 @@
         color: #ffffff;
         box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.15);
     }
-    &_center {
-        display: block;
-        margin: 0 auto;
-    }
     &_mb100 {
         margin-bottom: 100px;
     }
     &_form {
-        width: 130px;
-        height: 50px;
         padding: 19px 43px 19px 44px;
         border: none;
         margin-right: 0;
