--- a/src/sass/blocks/_team.scss
+++ b/src/sass/blocks/_team.scss
@@ -30,6 +30,10 @@
             width: 160px;
             height: 160px;
             margin-bottom: 60px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
 
         }
         &-name {
