--- a/src/sass/blocks/_easy.scss
+++ b/src/sass/blocks/_easy.scss
@@ -9,18 +9,25 @@
         text-align: center;
         margin-bottom: 20px;
     }
+    .container {
+        overflow-x: hidden;
+    }
     &__wrapper {
         display: flex;
-        justify-content: space-between;
-        margin-bottom: 63px;
+        // justify-content: space-between;
+        // margin-bottom: 63px;
         flex-wrap: wrap;
+        margin: 0 -100px 78px;
     }
     &__item {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        max-width: 346px;
+        width: 33.33333%;
+        // display: flex;
+        // flex: 0 0 calc(33% + 50px);
+        // flex-direction: column;
+        // align-items: center;
+        // text-align: center;
+        // max-width: 346px;
+        padding: 0 100px;
         margin-bottom: 15px;
 
 
@@ -43,7 +50,9 @@
     }
     &__blocks {
         display: flex;
-
+    }
+    .btn {
+        margin-right: 0;
     }
     &__block {
         height: 150px;
