--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,6 @@
 @import "libs/bootstrap-reboot.min";
 @import "libs/slick";
+@import "libs/animate";
 @import "variables/variables";
 
 
@@ -51,4 +52,5 @@ h1,h2,h3,h4,h5,h6 {
 @import "blocks/form";
 @import "blocks/social";
 @import "blocks/footer";
+@import "blocks/chevron";
 @import "base/media";
