--- a/src/sass/blocks/_feedback.scss
+++ b/src/sass/blocks/_feedback.scss
@@ -1,5 +1,5 @@
 .feedback {
-    background: url("../../img/bg_2.png") center (center/cover) no-repeat;
+    background: url("../../img/bg_2\(2\).jpg") center (center/cover) no-repeat;
     padding: 87px 0;
     &__wrapper {
         display: flex;
