--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,8 +1,8 @@
 .promo {
-    background: url("../img/bg1.png") center (center/cover) no-repeat;
+    background: url("../../img/bg_1\(2\).jpg") center (center/cover) no-repeat;
     width: 100%;
     height: 100vh;
-    min-height: 540px;
+    min-height: 750px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -36,7 +36,7 @@
     }
     &__video {
         position: relative;
-        background: url("../img/video_bg.png") center no-repeat;
+        background: url("../img/video_bg(2).jpg") center no-repeat;
         width: 600px;
         height: 307px;
         border-radius: 5px;
