--- a/src/sass/blocks/_team.scss
+++ b/src/sass/blocks/_team.scss
@@ -60,12 +60,17 @@
                 line-height: 25px;
                 font-weight: 400;
                 color: #90a4ae;
-                margin-right: 31px;
                 &:last-child {
                     margin-right: 0;
                 }
+                &:hover {
+                    color: #000;
+                } 
             }
         }
+    }
+    &__link {
+        margin-right: 31px;
     }
     .slick-center {
         transform: scale(1);
