--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,5 +1,5 @@
 .promo {
-    background: url("../../img/bg_1\(2\).jpg") center (center/cover) no-repeat;
+    background: url("../img/bg_1\(2\).jpg") center (center/cover) no-repeat;
     width: 100%;
     height: 100vh;
     min-height: 750px;
