--- a/src/sass/blocks/_team.scss
+++ b/src/sass/blocks/_team.scss
@@ -10,6 +10,7 @@
         width: 650px;
         overflow: hidden;
         margin: 0 auto;
+        cursor: pointer;
     }
     &__slide {
         width: 650px;
